<resources>
    <string name="app_name">AdmisionesEstudiantesESPOL</string>
    <string name="admisiones">Admisiones ESPOL</string>
    <string name="matricula">Cédula de Identidad</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="idCarrera">Carrera a la que desea aplicar</string>
    <string name="correo">Correo electrónico</string>
    <string name="registrar">Registrar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
</resources>
