<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/admisiones"
            android:textColor="@color/teal_700"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editTextMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/matricula"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextIDCarrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idCarrera"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registro"
            android:text="@string/registrar" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="consultarMatricula"
            android:text="@string/consultar" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="eliminarEstudiante"
            android:text="@string/eliminar" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificarInformacion"
            android:text="@string/modificar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>